--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,9 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
+    padding-top: 60px;
+    padding-bottom: 25px;
     background-color: #F6F6F6;
     background-image: url(https://static.vecteezy.com/ti/fotos-gratis/p2/1927754-papel-coracao-no-fundo-rosa-para-cartao-dia-dos-namorados-gr%C3%A1tis-foto.jpg);
     background-size: cover ;
@@ -217,7 +219,7 @@ body{
     padding: 20px 0px; 
     border-radius: 5px;
     width: 50vw;
-    height: 70vh;
+    height: 75vh;
     min-width: 900px;
     display: flex;
     flex-wrap: wrap;
@@ -235,7 +237,7 @@ body{
     padding: 20px 0px; 
     border-radius: 5px;
     width: 25vw;
-    height: 70vh;
+    height: 75vh;
     min-width: 450px;
     display: flex;
     flex-wrap: wrap;
@@ -249,6 +251,7 @@ body{
     cursor: pointer;
     transition: 0.8s;
 }
+
 
 #front{
     display: none;
@@ -398,7 +401,7 @@ body{
 
 
 .text{
-    font-size: 18px;
+    font-size: 14px;
     font-family: 'Kalam', cursive;
     margin-top:5px;
     margin-bottom: 5px;
@@ -424,7 +427,15 @@ body{
     animation: text-animated 1s alternate infinite ease-in;
 }
 
+@media (min-width: 1800px){
+    .cartao-closed{
+        width: 15vw;
+    }
 
+    .cartao-open{
+        width: 30vw;
+    }
+}
 @media (max-width:820px){
 
 
@@ -435,7 +446,7 @@ body{
     }
     .cartao-open{
         width: 90vw;
-        height: 75vh;
+        height: auto;
         min-width: 90%;
     }
 
